--- a/index.html
+++ b/index.html
@@ -4,49 +4,70 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="/css/map.css" media="screen" title="map" charset="utf-8">
     <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css" media="screen" title="angular-material" charset="utf-8">
+    <link rel="stylesheet" href="/css/map.css" media="screen" title="map" charset="utf-8">
 
     <!-- JavaScript -->
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
 
   </head>
   <body>
-    <input id="pac-input" class="controls" type="text"
-        placeholder="Enter a location">
-    <div id="type-selector" class="controls">
-      <input type="radio" name="type" id="changetype-all" checked="checked">
-      <label for="changetype-all">All</label>
-
-      <input type="radio" name="type" id="changetype-establishment">
-      <label for="changetype-establishment">Establishments</label>
-
-      <input type="radio" name="type" id="changetype-address">
-      <label for="changetype-address">Addresses</label>
-
-      <input type="radio" name="type" id="changetype-geocode">
-      <label for="changetype-geocode">Geocodes</label>
-    </div>
-    <div id="map-canvas"></div>
-    <!-- <div ng-controller="AppCtrl" class="sliderdemoBasicUsage" ng-app="MyApp">
-      <md-content style="margin: 16px; padding:16px">
-        <div layout="">
-          <div flex="10" layout="" layout-align="center center">
-            <span class="md-body-1">default</span>
-          </div>
-          <md-slider flex="" md-discrete="" ng-model="rating1" step="1" min="1" max="5" aria-label="rating">
-          </md-slider>
-        </div>
+    <div ng-controller="DemoCtrl as ctrl" layout="column" class="autocompletedemoBasicUsage" ng-app="MyApp">
+      <md-content class="md-padding">
+        <form ng-submit="fetch()">
+          <md-autocomplete ng-disabled="ctrl.isDisabled" md-no-cache="ctrl.noCache" md-selected-item="ctrl.selectedItem" md-search-text-change="ctrl.searchTextChange(ctrl.searchText)" md-search-text="ctrl.searchText" md-selected-item-change="ctrl.selectedItemChange(item)" md-items="item in ctrl.querySearch(ctrl.searchText)" md-item-text="item.display" md-min-length="0" placeholder="">
+            <md-item-template>
+              <span md-highlight-text="ctrl.searchText" md-highlight-flags="^i">{{item.display}}</span>
+            </md-item-template>
+            <md-not-found>
+              No matches found for "{{ctrl.searchText}}".
+            </md-not-found>
+          </md-autocomplete>
+        </form>
       </md-content>
-    </div> -->
-    <script src="js/map.js"></script>
+      <div id="map-canvas"></div>
+      <div id="hours" class="sliderdemoBasicUsage">
+        <md-card id="detail">
+          <!--
+          var contentString = '<div class="infoWindow"><img src="'+ element.thumUrl +'" style="float: left; width: 15%; padding-right: 10px"><h1>'
+            + element.name + '</h1><p>' + element.roadAddress + ' / <a href="tel://'+ element.tel +'">'+ element.tel +'</a>' + '</p></div>';
+          -->
+          <md-card-content>
+            <h2 class="md-title">{{site.name}}</h2>
+            <div id="likes"></div>
+            <div id="images">
+              <img src="{{site.thumUrl}}">
+            </div>
+            <p>{{site.roadAddress}} / <a href="tel://{{site.tel}}">{{site.tel}}</a></p>
+          </md-card-content>
+        </md-card>
+        <md-card id="infoWindow" style="display: none;">
+          <md-card-content>
+            <img src="{{element.thumUrl}}">
+            <h2>{{element.name}}</h2>
+            <p>{{element.roadAddress}} / <a href="tel://{{element.tel}}">{{element.tel}}</a></p>
+          </md-card-content>
+        </md-card>
+        <md-content>
+          <div layout="">
+            <div flex="10" layout="" layout-align="center center">
+              <span class="md-body-1">시간</span>
+            </div>
+            <md-slider flex="" md-discrete="" ng-model="date" step="1" min="0" max="24" aria-label="date">
+            </md-slider>
+          </div>
+        </md-content>
+      </div>
+    </div>
 
     <!-- angular.js -->
-    <!--
+    <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
+
     <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="/bower_components/angular-animate/angular-animate.min.js"></script>
     <script type="text/javascript" src="/bower_components/angular-aria/angular-aria.min.js"></script>
     <script type="text/javascript" src="/bower_components/angular-material/angular-material.min.js"></script>
-    -->
+    <script type="text/javascript" src="/js/DemoCtrl.js"></script>
+
   </body>
 </html>
